@@ -108,6 +108,8 @@ static const QtNodeType qt_node_types[] = {
   {FOURCC_rdrf, "rdrf", 0,},
   {FOURCC__gen, "Custom Genre", QT_FLAG_CONTAINER,},
   {FOURCC_ctts, "Composition time to sample", 0, qtdemux_dump_ctts},
+  {FOURCC_XiTh, "XiTh", 0},
+  {FOURCC_XdxT, "XdxT", 0},
   {0, "unknown", 0,},
 };
 static const int n_qt_node_types =
